--- a/index.html
+++ b/index.html
@@ -173,19 +173,18 @@
       <!-- เปลี่ยน src เป็นลิงก์รูปของคุณ -->
       <img
         class="profile-photo"
-        src="https://via.placeholder.com/200"
-        alt="Your Name"
+        src="assets/Profile.jpg"
+        alt="TanakorncProfile"
       />
 
       <div class="name-block">
-        <h1>Your Name</h1>
-        <h2>Computer Engineering Student · Software Developer Intern</h2>
+        <h1>Tanakorn Channgarm</h1>
+        <h2>Computer Science Student · Software Developer Intern</h2>
 
         <nav>
           <!-- แก้ลิงก์ตามจริง -->
-          <a href="mailto:you@example.com">you@example.com</a>
-          <a href="https://github.com/your-username" target="_blank">GitHub</a>
-          <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
+          <a href="mailto:tanakorncn.159@gmail.com">tanakorncn.159@gmail.com</a>
+          <a href="https://www.linkedin.com/in/tanakorn-c-092038346" target="_blank">LinkedIn</a>
         </nav>
       </div>
     </header>
@@ -194,10 +193,12 @@
     <section id="about">
       <h3>About</h3>
       <p class="about-text">
-        I am a Computer Engineering student with a strong interest in software development,
-        focusing on building practical applications and learning modern tools and frameworks.
-        I enjoy working on side projects, improving code quality, and collaborating with others
-        to turn ideas into working products.
+        Computer Science student committed to continuous improvement and eager to apply technical expertise in a professional environment.
+I am currently pursuing a Bachelor's degree in Computer Science at the University of the Thai Chamber of Commerce (UTCC) with a GPAX of 3.36.
+        During my studies, I have focused heavily on Mobile and Backend Development, gaining hands-on experience by building an Android application using Flutter and Spring Boot. 
+        I also explored complex logic and object-oriented programming through Game Development with Unity (C#).
+Beyond coding, my experience as a Teacher's Assistant has strengthened my communication skills and adaptability. 
+        I am now ready to leverage my existing skills to deliver high-quality software solutions and eager to master new technologies in the software development field.
       </p>
     </section>
 
