--- a/index.html
+++ b/index.html
@@ -85,29 +85,45 @@
     }
 
     .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 12px;
-    }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 32px;
+  justify-items: center;
+}
 
-    .skill-group {
-      background: #020617;
-      border-radius: 12px;
-      padding: 12px 14px;
-      border: 1px solid #1f2937;
-    }
+.skill-item {
+  text-align: center;
+  max-width: 200px;
+}
 
-    .skill-group h4 {
-      margin: 0 0 6px;
-      font-size: 0.95rem;
-      color: #e5e7eb;
-    }
+.skill-icon {
+  width: 72px;
+  height: 72px;
+  border-radius: 999px;
+  background: #f9fafb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto 12px;
+  box-shadow: 0 10px 25px rgba(15, 23, 42, 0.25);
+}
 
-    .skill-group p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #9ca3af;
-    }
+.skill-icon span {
+  font-size: 1.6rem;
+}
+
+.skill-item h4 {
+  margin: 0 0 4px;
+  font-size: 1rem;
+  color: #e5e7eb;
+}
+
+.skill-item p {
+  margin: 0;
+  font-size: 0.85rem;
+  color: #9ca3af;
+}
+
 
     .projects-grid {
       display: grid;
@@ -204,93 +220,125 @@ Beyond coding, my experience as a Teacher's Assistant has strengthened my commun
 
     <!-- SECTION 3: SKILLS -->
     <section id="skills">
-      <h3>Skills</h3>
-      <div class="skills-grid">
-        <div class="skill-group">
-          <h4>Languages</h4>
-          <p>Python, Java, C#, Dart, JavaScript</p>
-        </div>
-        <div class="skill-group">
-          <h4>Frameworks & Tools</h4>
-          <p>Flutter, Unity, Spring Boot, Node.js, Git</p>
-        </div>
-        <div class="skill-group">
-          <h4>Databases</h4>
-          <p>MongoDB, MySQL, Firestore</p>
-        </div>
-        <div class="skill-group">
-          <h4>Other</h4>
-          <p>REST APIs, OOP, Basic data structures & algorithms</p>
-        </div>
-      </div>
-    </section>
+  <h3>Skills</h3>
+  <div class="skills-grid">
+
+    <!-- Languages -->
+    <div class="skill-item">
+      <div class="skill-icon"><span>Py</span></div>
+      <h4>Python</h4>
+      <p>Scripting, logic for quiz & backend utilities.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>J</span></div>
+      <h4>Java</h4>
+      <p>OOP foundations and data structures from coursework.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>C#</span></div>
+      <h4>C#</h4>
+      <p>Unity game systems and turn-based combat logic.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>JS</span></div>
+      <h4>JavaScript</h4>
+      <p>Interactive UI and basic web application logic.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>D</span></div>
+      <h4>Dart</h4>
+      <p>Flutter UI, state handling, and notification flows.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>SQL</span></div>
+      <h4>SQL</h4>
+      <p>Queries, joins, and basic data modeling.</p>
+    </div>
+
+    <!-- Frameworks & Tools -->
+    <div class="skill-item">
+      <div class="skill-icon"><span>SB</span></div>
+      <h4>Spring Boot</h4>
+      <p>REST APIs for medicine schedules and backend services.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>Fl</span></div>
+      <h4>Flutter</h4>
+      <p>Android medicine reminder UI and alarm workflows.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>U</span></div>
+      <h4>Unity Engine</h4>
+      <p>2D turn-based RPG systems and gameplay events.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>MDB</span></div>
+      <h4>MongoDB</h4>
+      <p>Document schemas for medicines and quiz content.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>Git</span></div>
+      <h4>Git / GitHub</h4>
+      <p>Branching, commits, and project collaboration.</p>
+    </div>
+
+    <div class="skill-item">
+      <div class="skill-icon"><span>Ex</span></div>
+      <h4>Microsoft Excel</h4>
+      <p>Tracking, simple analysis, and quick reporting.</p>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- SECTION 4: PROJECTS -->
-    <section id="projects">
-      <h3>Projects</h3>
-      <div class="projects-grid">
-        <!-- Project 1 -->
-        <div class="project-card">
-          <h4>Medicine Reminder App</h4>
-          <div class="project-meta">
-            Flutter · Android · Notifications · Firebase / MongoDB
-          </div>
-          <p class="project-desc">
-            Mobile application that helps users schedule and manage their medicine intake
-            with local notifications, schedule management, and a simple, clean UI.
-          </p>
-          <ul class="project-desc">
-            <li>Implemented local notification scheduling with custom time and repeat patterns.</li>
-            <li>Designed data model for medicines, schedules, and user preferences.</li>
-            <li>Integrated backend API / database to store and sync user data.</li>
-          </ul>
-          <div class="project-links">
-            <a href="https://github.com/your-username/medicine-reminder" target="_blank">Source code</a>
-            <!-- ถ้ามีภาพหน้าจอ / demo เพิ่มได้ -->
-          </div>
-        </div>
+   <section id="projects">
+  <h3>Projects</h3>
+  <div class="projects-grid">
 
-        <!-- Project 2 -->
-        <div class="project-card">
-          <h4>Coding is Magic – Turn-based RPG</h4>
-          <div class="project-meta">
-            Unity · C# · 2D Game · Turn-based Combat
-          </div>
-          <p class="project-desc">
-            A 2D turn-based RPG prototype where players use coding-themed abilities to
-            battle enemies, focusing on turn order, animations, and basic combat logic.
-          </p>
-          <ul class="project-desc">
-            <li>Implemented turn-based battle system with player and enemy actions.</li>
-            <li>Set up animation states and sprite handling for characters.</li>
-            <li>Structured code to be extendable for new skills and enemies.</li>
-          </ul>
-          <div class="project-links">
-            <a href="https://github.com/your-username/coding-is-magic" target="_blank">Source code</a>
-          </div>
-        </div>
-
-        <!-- Project 3 (ตัวอย่างเพิ่ม/ลบได้) -->
-        <div class="project-card">
-          <h4>Simple REST API Backend</h4>
-          <div class="project-meta">
-            Spring Boot · REST · MongoDB
-          </div>
-          <p class="project-desc">
-            Backend service that provides CRUD APIs for managing resources, focusing
-            on clean structure and basic validation.
-          </p>
-          <ul class="project-desc">
-            <li>Designed REST endpoints and data models.</li>
-            <li>Connected to MongoDB and implemented repository pattern.</li>
-            <li>Tested the API using Postman / HTTP clients.</li>
-          </ul>
-          <div class="project-links">
-            <a href="https://github.com/your-username/backend-api" target="_blank">Source code</a>
-          </div>
-        </div>
+    <div class="project-card">
+      <h4>Medicine Reminder Application</h4>
+      <div class="project-meta">
+        Flutter · Android · Spring Boot · MongoDB
       </div>
-    </section>
+      <p class="project-desc">
+        Android application that helps patients improve medication adherence with clear schedules and timely reminders.
+      </p>
+      <ul class="project-desc">
+        <li>Developed the mobile app in Flutter, focusing on clean UI and simple user flows for adding and managing medicines.</li>
+        <li>Architected a Spring Boot backend with MongoDB for CRUD operations on medication schedules, images, and custom alarm triggers.</li>
+        <li>Connected the app and backend through REST APIs to keep local reminders in sync with server data.</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
+      <h4>Educational RPG Game – "Coding is Magic"</h4>
+      <div class="project-meta">
+        Unity · C# · 2D Turn-based RPG
+      </div>
+      <p class="project-desc">
+        A 2D turn-based adventure game designed to teach Python programming fundamentals through gamification and quizzes.
+      </p>
+      <ul class="project-desc">
+        <li>Built the core combat system in Unity using C#, including turn order, actions, and feedback to the player.</li>
+        <li>Implemented mechanics where casting spells requires solving quiz questions, with damage and bonuses based on accuracy and response time.</li>
+        <li>Designed a dynamic content system so instructors can add, edit, or remove quiz questions to adapt the learning curriculum.</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
 
     <footer>
       © <span id="year"></span> Your Name. Built for Software Developer Intern applications.
