--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 }
 
 .skill-icon {
-  width: 72px;
-  height: 72px;
+  width: 60%;
+  height: 60%;
+  object-fit: contain;
   border-radius: 999px;
   background: #f9fafb;
   display: flex;
@@ -123,6 +124,7 @@
   font-size: 0.85rem;
   color: #9ca3af;
 }
+    
 
 
     .projects-grid {
@@ -219,82 +221,107 @@ Beyond coding, my experience as a Teacher's Assistant has strengthened my commun
     </section>
 
     <!-- SECTION 3: SKILLS -->
-    <section id="skills">
+ <!-- SECTION 3: SKILLS -->
+<section id="skills">
   <h3>Skills</h3>
   <div class="skills-grid">
 
     <!-- Languages -->
     <div class="skill-item">
-      <div class="skill-icon"><span>Py</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python icon" />
+      </div>
       <h4>Python</h4>
       <p>Scripting, logic for quiz & backend utilities.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>J</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java icon" />
+      </div>
       <h4>Java</h4>
       <p>OOP foundations and data structures from coursework.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>C#</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C# icon" />
+      </div>
       <h4>C#</h4>
       <p>Unity game systems and turn-based combat logic.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>JS</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript icon" />
+      </div>
       <h4>JavaScript</h4>
       <p>Interactive UI and basic web application logic.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>D</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dart/dart-original.svg" alt="Dart icon" />
+      </div>
       <h4>Dart</h4>
       <p>Flutter UI, state handling, and notification flows.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>SQL</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL icon" />
+      </div>
       <h4>SQL</h4>
       <p>Queries, joins, and basic data modeling.</p>
     </div>
 
     <!-- Frameworks & Tools -->
     <div class="skill-item">
-      <div class="skill-icon"><span>SB</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="Spring Boot icon" />
+      </div>
       <h4>Spring Boot</h4>
       <p>REST APIs for medicine schedules and backend services.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>Fl</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flutter/flutter-original.svg" alt="Flutter icon" />
+      </div>
       <h4>Flutter</h4>
       <p>Android medicine reminder UI and alarm workflows.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>U</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Unity icon" />
+      </div>
       <h4>Unity Engine</h4>
       <p>2D turn-based RPG systems and gameplay events.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>MDB</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB icon" />
+      </div>
       <h4>MongoDB</h4>
       <p>Document schemas for medicines and quiz content.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>Git</span></div>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git icon" />
+      </div>
       <h4>Git / GitHub</h4>
       <p>Branching, commits, and project collaboration.</p>
     </div>
 
     <div class="skill-item">
-      <div class="skill-icon"><span>Ex</span></div>
-      <h4>Microsoft Excel</h4>
-      <p>Tracking, simple analysis, and quick reporting.</p>
+      <div class="skill-icon">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma icon" />
+      </div>
+      <h4>Figma</h4>
+      <p>Wireframes, prototypes, components.</p>
     </div>
 
   </div>
