--- a/index.html
+++ b/index.html
@@ -64,28 +64,29 @@
       flex-wrap: wrap;
     }
 
-    .profile-photo {
-  width: 150px;
-  height: 150px;
+ .profile-photo {
+  width: 180px;
+  height: 180px;
   border-radius: 999px;
   object-fit: cover;
   border: 3px solid var(--accent);
   background: #020617;
-  box-shadow: 0 18px 44px rgba(0,0,0,0.8);
+  box-shadow: 0 20px 48px rgba(0,0,0,0.9);
 }
 
 .name-block h1 {
-  margin: 0 0 6px;
-  font-size: 2.4rem;
-  letter-spacing: 0.03em;
+  margin: 0 0 8px;
+  font-size: 2.8rem;
+  letter-spacing: 0.04em;
 }
 
 .name-block h2 {
   margin: 0;
-  font-size: 1.02rem;
+  font-size: 1.1rem;
   color: var(--text-muted);
   font-weight: 400;
 }
+
 
 
     .pill {
@@ -605,10 +606,11 @@
             A 2D turn-based adventure game designed to teach Python programming fundamentals through gamification and quizzes.
           </p>
           <ul class="project-desc">
-            <li>Implemented the core combat system in Unity using C#, including turn order, actions, and player feedback.</li>
-            <li>Created mechanics where casting spells requires solving quiz questions, with damage and bonuses based on accuracy and response time.</li>
-            <li>Designed a dynamic content system so instructors can add, edit, or remove quiz questions to adapt the learning curriculum.</li>
-          </ul>
+    <li>Implemented the core combat system in Unity using C#, including turn order, actions, and player feedback.</li>
+    <li>Created mechanics where casting spells requires solving quiz questions, with damage and bonuses based on accuracy and response time.</li>
+    <li>Designed a dynamic content system so instructors can add, edit, or remove quiz questions to adapt the learning curriculum.</li>
+    <li>Showcased at the university Open House and awarded <strong>2nd place</strong> in the Computer Science program showcase.</li>
+  </ul>
           <div class="project-links">
             <!-- TODO: แก้ลิงก์ให้เป็น repo จริงของคุณ -->
             <a class="btn" href="https://github.com/your-github-username/coding-is-magic" target="_blank">
