--- a/index.html
+++ b/index.html
@@ -798,125 +798,83 @@
 </section>
 
         <!-- CERTIFICATES -->
-       <!-- CERTIFICATES -->
-    <section id="certificates" class="fade-in-up">
-      <h3>Certificates & Continuous Learning</h3>
+  <!-- CERTIFICATES -->
+<section id="certificates" class="fade-in-up">
+  <h3>Certificates & Continuous Learning</h3>
 
-      <div class="cert-layout">
+  <div class="cert-layout">
 
-        <!-- LEFT: Heroes + Supporting Cast -->
-        <div>
-          <!-- The Heroes -->
-          <p class="cert-featured-title">The Heroes</p>
-          <div class="cert-grid">
+    <!-- LEFT: Core Certifications -->
+    <div>
+      <!-- Core Certifications -->
+      <p class="cert-featured-title">Core Certifications</p>
+      <div class="cert-grid">
 
-            <!-- Certified Backend Developer with Java -->
-            <div class="cert-card hero fade-in-up">
-              <div class="cert-thumb">J</div>
-              <div class="cert-body">
-                <div class="cert-name">Certified Backend Developer with Java</div>
-                <div class="cert-meta">W3Schools · 2023</div>
-                <div class="cert-desc">
-                  Mastered core backend concepts, Java EE standards, and database integration,
-                  building a strong foundation for Spring Boot and RESTful services.
-                </div>
-                <div class="cert-tag">
-                  <span class="cert-tag-dot"></span>
-                  <span>Backend · Java · Databases</span>
-                </div>
-              </div>
+        <!-- Certified Backend Developer with Java -->
+        <div class="cert-card hero fade-in-up">
+          <div class="cert-thumb">J</div>
+          <div class="cert-body">
+            <div class="cert-name">Certified Backend Developer with Java</div>
+            <div class="cert-meta">W3Schools · 2023</div>
+            <div class="cert-desc">
+              Mastered core backend concepts, Java EE standards, and database integration,
+              building a strong foundation for Spring Boot and RESTful services.
             </div>
-
-            <!-- Certified Java Developer -->
-            <div class="cert-card hero fade-in-up">
-              <div class="cert-thumb">Jv</div>
-              <div class="cert-body">
-                <div class="cert-name">Certified Java Developer</div>
-                <div class="cert-meta">W3Schools · 2023</div>
-                <div class="cert-desc">
-                  Strengthened core Java skills including OOP, collections, error handling,
-                  and clean coding practices used across academic and personal projects.
-                </div>
-                <div class="cert-tag">
-                  <span class="cert-tag-dot"></span>
-                  <span>Core Java · OOP</span>
-                </div>
-              </div>
+            <div class="cert-tag">
+              <span class="cert-tag-dot"></span>
+              <span>Backend · Java · Databases</span>
             </div>
-
-            <!-- Mini Data Science Bootcamp -->
-            <div class="cert-card hero fade-in-up">
-              <div class="cert-thumb">DS</div>
-              <div class="cert-body">
-                <div class="cert-name">Mini Data Science Bootcamp</div>
-                <div class="cert-meta">DataRockie · 2023</div>
-                <div class="cert-desc">
-                  Project-based training on spreadsheets, SQL, dashboards, and Python analytics,
-                  focusing on turning raw data into practical business insights.
-                </div>
-                <div class="cert-tag">
-                  <span class="cert-tag-dot"></span>
-                  <span>Data · SQL · Analytics</span>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- The Supporting Cast -->
-          <p class="cert-featured-title" style="margin-top:24px;">The Supporting Cast</p>
-          <div class="cert-grid cert-grid-support">
-
-            <!-- Certified MySQL Developer -->
-            <div class="cert-card support fade-in-up">
-              <div class="cert-thumb">My</div>
-              <div class="cert-body">
-                <div class="cert-name">Certified MySQL Developer</div>
-                <div class="cert-meta">W3Schools</div>
-                <div class="cert-desc">
-                  Practiced schema design, joins, indexing, and query optimization in MySQL.
-                </div>
-              </div>
-            </div>
-
-            <!-- Certified SQL Developer -->
-            <div class="cert-card support fade-in-up">
-              <div class="cert-thumb">SQL</div>
-              <div class="cert-body">
-                <div class="cert-name">Certified SQL Developer</div>
-                <div class="cert-meta">W3Schools</div>
-                <div class="cert-desc">
-                  Covered SQL fundamentals from SELECT and JOIN to aggregation and subqueries.
-                </div>
-              </div>
-            </div>
-
-            <!-- SQL Crash Course -->
-            <div class="cert-card support fade-in-up">
-              <div class="cert-thumb">SQ</div>
-              <div class="cert-body">
-                <div class="cert-name">SQL Crash Course</div>
-                <div class="cert-meta">DataRockie</div>
-                <div class="cert-desc">
-                  Hands-on SQL practice from a data analyst perspective: exploring, filtering,
-                  and summarizing larger datasets.
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
 
-        <!-- RIGHT: Hidden Gems / Additional learning -->
-        <div class="cert-others fade-in-up">
-          <p class="cert-others-title">Additional Learning</p>
-          <ul>
-            <li>Writing as a Tool for Thinking — DataRockie</li>
-            <li>Data Analyst Manifesto — DataRockie</li>
-          </ul>
+        <!-- Certified Java Developer -->
+        <div class="cert-card hero fade-in-up">
+          <div class="cert-thumb">Jv</div>
+          <div class="cert-body">
+            <div class="cert-name">Certified Java Developer</div>
+            <div class="cert-meta">W3Schools · 2023</div>
+            <div class="cert-desc">
+              Strengthened core Java skills including OOP, collections,
+              error handling, and clean coding practices used in projects.
+            </div>
+            <div class="cert-tag">
+              <span class="cert-tag-dot"></span>
+              <span>Core Java · OOP</span>
+            </div>
+          </div>
         </div>
 
+        <!-- Mini Data Science Bootcamp -->
+        <div class="cert-card hero fade-in-up">
+          <div class="cert-thumb">DS</div>
+          <div class="cert-body">
+            <div class="cert-name">Mini Data Science Bootcamp</div>
+            <div class="cert-meta">DataRockie · 2023</div>
+            <div class="cert-desc">
+              Project-based training on spreadsheets, SQL, dashboards,
+              and Python analytics for turning raw data into insights.
+            </div>
+            <div class="cert-tag">
+              <span class="cert-tag-dot"></span>
+              <span>Data · SQL · Analytics</span>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+    </div>
+
+    <!-- RIGHT: Additional Learning -->
+    <div class="cert-others fade-in-up">
+      <p class="cert-others-title">Additional Learning</p>
+      <ul>
+        <li>Certified MySQL Developer — W3Schools</li>
+        <li>Certified SQL Developer — W3Schools</li>
+        <li>Writing as a Tool for Thinking — DataRockie</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
 
     <footer class="fade-in-up">
       <span>© <span id="year"></span> <span class="accent">Tanakorn Channgarm</span></span>
