--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
         />
         <div>
           <h1 class="hero-name">Tanakorn Channgarm</h1>
-          <h2 class="hero-role">Computer Science Student · Software Developer (Flutter &amp; Spring Boot)</h2>
+          <h2 class="hero-role">Computer Science Student · Software Developer </h2>
           <div class="hero-pill">
             <span class="hero-pill-dot"></span>
             <span>Focused on Mobile &amp; Backend Development</span>
