--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@
       gap: 20px;
     }
 
-    .hero-photo {
-      width: 220px;
-      height: 220px;
-      border-radius: 999px;
-      object-fit: cover;
-      border: 3px solid var(--accent);
-      background: #020617;
-      box-shadow: 0 26px 64px rgba(0, 0, 0, 0.95);
-    }
+.hero-photo {
+  width: 240px;          /* เดิม 220 ปรับให้ใหญ่ขึ้น ~10%+ */
+  height: 240px;
+  border-radius: 999px;
+  object-fit: cover;
+  border: 4px solid var(--accent);   /* เดิม 3px */
+  background: #020617;
+  box-shadow: 0 26px 64px rgba(0, 0, 0, 0.95);
+  margin-bottom: 32px;   /* เพิ่มระยะห่างรูปกับชื่อ */
+}
 
     .hero-name {
       font-size: clamp(2.2rem, 3vw, 2.8rem);
@@ -752,6 +753,40 @@
       transform: translateY(0);
       transition: opacity 0.7s ease-out, transform 0.7s ease-out;
     }
+
+        /* =========== Soft Skills + Languages ใต้ Skills =========*/
+
+    .skills-extra {
+  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  align-items: flex-start;
+}
+
+.skills-extra-block h4 {
+  margin: 0 0 10px;
+  font-size: 0.9rem;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  color: var(--text-muted);
+}
+
+.chip-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.chip {
+  padding: 4px 10px;
+  border-radius: 999px;
+  background: rgba(15, 23, 42, 0.9);
+  border: 1px solid rgba(148, 163, 184, 0.5);
+  font-size: 0.8rem;
+  color: var(--text-main);
+}
+
   </style>
 </head>
 
@@ -889,6 +924,29 @@
               </div>
             </div>
           </div>
+
+          <div class="skills-extra">
+  <!-- Soft Skills -->
+  <div class="skills-extra-block">
+    <h4>Soft Skills</h4>
+    <div class="chip-list">
+      <span class="chip">Self Learning</span>
+      <span class="chip">Adaptability</span>
+      <span class="chip">Problem Solving</span>
+      <span class="chip">Composure</span>
+    </div>
+  </div>
+
+  <!-- Languages -->
+  <div class="skills-extra-block">
+    <h4>Languages</h4>
+    <div class="chip-list">
+      <span class="chip">Thai — Native</span>
+      <span class="chip">English — Intermediate (comfortable with documentation &amp; team communication)</span>
+    </div>
+  </div>
+</div>
+
 
           <!-- Frameworks & Platforms -->
           <div class="skills-category">
@@ -1068,70 +1126,59 @@
 
         <div class="cert-layout">
           <!-- Core Certifications -->
-          <div>
-            <p class="cert-featured-title">Core Certifications</p>
-            <div class="cert-grid">
+         <div>
+  <p class="cert-featured-title">Core Certifications</p>
+  <div class="cert-grid">
 
-              <div class="cert-card">
-                <div class="cert-thumb">J</div>
-                <div class="cert-body">
-                  <div class="cert-name">Certified Backend Developer with Java</div>
-                  <div class="cert-meta">W3Schools · 2023</div>
-                  <div class="cert-desc">
-                    Mastered core backend concepts, Java EE standards, and database integration,
-                    building a strong foundation for Spring Boot and RESTful services.
-                  </div>
-                  <div class="cert-tag">
-                    <span class="cert-tag-dot"></span>
-                    <span>Backend · Java · Databases</span>
-                  </div>
-                </div>
-              </div>
+    <!-- Certified Backend Developer with Java -->
+    <div class="cert-card">
+      <div class="cert-thumb">J</div>
+      <div class="cert-body">
+        <div class="cert-name">Certified Backend Developer with Java</div>
+        <div class="cert-meta">W3Schools · 2023</div>
+        <div class="cert-desc">
+          Mastered core backend concepts, Java web standards, and database integration,
+          building a solid foundation for Spring Boot and RESTful services.
+        </div>
+        <div class="cert-tag">
+          <span class="cert-tag-dot"></span>
+          <span>Backend · Java · Databases</span>
+        </div>
+      </div>
+    </div>
 
-              <div class="cert-card">
-                <div class="cert-thumb">Jv</div>
-                <div class="cert-body">
-                  <div class="cert-name">Certified Java Developer</div>
-                  <div class="cert-meta">W3Schools · 2023</div>
-                  <div class="cert-desc">
-                    Strengthened core Java skills including OOP, collections,
-                    error handling, and clean coding practices used in projects.
-                  </div>
-                  <div class="cert-tag">
-                    <span class="cert-tag-dot"></span>
-                    <span>Core Java · OOP</span>
-                  </div>
-                </div>
-              </div>
+    <!-- Mini Data Science Bootcamp -->
+    <div class="cert-card">
+      <div class="cert-thumb">DS</div>
+      <div class="cert-body">
+        <div class="cert-name">Mini Data Science Bootcamp</div>
+        <div class="cert-meta">DataRockie · 2023</div>
+        <div class="cert-desc">
+          Project-based training on spreadsheets, SQL, dashboards,
+          and Python analytics for turning raw data into practical insights.
+        </div>
+        <div class="cert-tag">
+          <span class="cert-tag-dot"></span>
+          <span>Data · SQL · Analytics</span>
+        </div>
+      </div>
+    </div>
 
-              <div class="cert-card">
-                <div class="cert-thumb">DS</div>
-                <div class="cert-body">
-                  <div class="cert-name">Mini Data Science Bootcamp</div>
-                  <div class="cert-meta">DataRockie · 2023</div>
-                  <div class="cert-desc">
-                    Project-based training on spreadsheets, SQL, dashboards,
-                    and Python analytics for turning raw data into decision-making insights.
-                  </div>
-                  <div class="cert-tag">
-                    <span class="cert-tag-dot"></span>
-                    <span>Data · SQL · Analytics</span>
-                  </div>
-                </div>
-              </div>
+  </div>
+</div>
 
-            </div>
-          </div>
 
           <!-- Additional Learning -->
-          <aside class="cert-others">
-            <p class="cert-others-title">Additional Learning</p>
-            <ul>
-              <li>Certified MySQL Developer — W3Schools</li>
-              <li>Certified SQL Developer — W3Schools</li>
-              <li>Writing as a Tool for Thinking — DataRockie</li>
-            </ul>
-          </aside>
+      <aside class="cert-others">
+  <p class="cert-others-title">Additional Learning</p>
+  <ul>
+    <li>
+      Java programming, MySQL / SQL fundamentals, and
+      <em>Writing as a Tool for Thinking</em> (W3Schools &amp; DataRockie).
+    </li>
+  </ul>
+</aside>
+
         </div>
       </div>
     </section>
