--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
       <div class="container hero-inner reveal">
         <img
           class="hero-photo"
-          src="assets/Profile.jpg"
+          src="assets/Profile2.jpg"
           alt="Tanakorn Profile"
         />
         <div>
